// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> 선택되지 않은 탭을 누르면 해당 탭 페이지를 표시한다 1`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <TabHeader>
    <TabItem
      onClick={[Function]}
      selected={true}
    />
    <TabItem
      onClick={[Function]}
      selected={false}
    />
  </TabHeader>
  <TabDivider
    borderColor="gray.30"
  />
  <TabPage
    title="title1"
  >
    탭 페이지 1
  </TabPage>
</div>
`;

exports[`<Tab /> 선택되지 않은 탭을 누르면 해당 탭 페이지를 표시한다 2`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <TabHeader>
    <TabItem
      onClick={[Function]}
      selected={false}
    />
    <TabItem
      onClick={[Function]}
      selected={true}
    />
  </TabHeader>
  <TabDivider
    borderColor="gray.30"
  />
  <TabPage
    title="title2"
  >
    탭 페이지 2
  </TabPage>
</div>
`;

exports[`<Tab /> 정상적으로 렌더링된다 1`] = `
.c0 {
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <TabHeader>
    <TabItem
      onClick={[Function]}
      selected={true}
    />
    <TabItem
      onClick={[Function]}
      selected={false}
    />
  </TabHeader>
  <TabDivider
    borderColor="gray.30"
  />
  <TabPage
    title="title1"
  >
    탭 페이지 1
  </TabPage>
</div>
`;
